tests/errors/syn_method2.java
public class syn_method2 {
public String[] main ( ) {
 
}
}